--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             margin: 0;
         }
         </style>
-        <title>Carta di Attitudine dei suoli allo spandimento dei reflui oleari - Frantoio Mazzitelli Pasquale</title>
+        <title> Frantoio Mazzitelli Pasquale</title>
     </head>
     <body>
         <div id="map">
@@ -589,5 +589,7 @@
             resetLabels([layer_Com01012024_g_WGS84_6,layer_PuntiInteresseMP_7,layer_geo_8,layer_MazziteliPasqualeParticellefrantoio_9]);
         });
         </script>
+	    <div align="right">
+        <small>Antonello Summo</small>
     </body>
 </html>
